// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Input /> > should render with addon left  without crashing 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    Left
    <input
      class="container__input"
    />
    <div
      class="container__bar"
    />
  </div>
</DocumentFragment>
`;

exports[`<Input /> > should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <input
      class="container__input"
    />
    <div
      class="container__bar"
    />
  </div>
</DocumentFragment>
`;

exports[`<Input /> should render with addon left  without crashing 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    Left
    <input
      class="container__input"
    />
    <div
      class="container__bar"
    />
  </div>
</DocumentFragment>
`;

exports[`<Input /> should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <input
      class="container__input"
    />
    <div
      class="container__bar"
    />
  </div>
</DocumentFragment>
`;
